@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.48.00
 
+              Add pbmtocis, cistopbm.  Thanks John Elliott
+              <jce@seasip.demon.co.uk>.
+
 09.06.27 BJH  Release 10.47.00
 
               Add pamsistoaglyph.  Thanks Scott Pakin.
